<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_rojo"
        android:layout_width="165dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/btn_rojo"
        app:layout_constraintBottom_toTopOf="@+id/btn_verde"
        app:layout_constraintEnd_toStartOf="@+id/btn_azul"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_azul"
        android:layout_width="165dp"
        android:layout_height="250dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btn_azul"
        app:layout_constraintBottom_toTopOf="@+id/btn_amarillo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_verde"
        style="@style/Colors"
        android:layout_width="165dp"
        android:layout_height="250dp"

        android:layout_marginStart="13dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_amarillo"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_amarillo"
        android:layout_width="165dp"
        android:layout_height="250dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_amarillo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_Inicio"
        android:layout_width="288dp"
        android:layout_height="51dp"
        android:layout_marginTop="112dp"
        android:text="@string/iniciar"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="17dp"
        android:text="@string/score"
        android:textColor="@color/purple_700"
        android:textFontWeight="1000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/record"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="16dp"
        android:text="@string/record"
        android:textColor="@color/purple_700"
        android:textFontWeight="1000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/ronda"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginTop="2dp"
        android:text="Ronda:"
        android:textColor="@color/purple_700"
        android:textFontWeight="1000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>